fix: remove vendor

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
             "email": "contact@henri1i.me"
         }
     ],
-    "require": {},
+    "require": {
+        "php": "^8.1",
+        "laravel/laravel": "^9.5"
+    },
     "extra": {
         "laravel": {
             "providers": [
