--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "laravel/laravel": "^9.5"
+        "php": "^8.1"
     },
     "extra": {
         "laravel": {
